fix- container fluid class padding was causing white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ body {
     font-family: "Proza Libre", sans-serif;
 }
 
+.container-fluid {
+    padding: 0;
+    margin: 0;
+}
+
 /*---------------------Nav */
 #nav {
     margin: 0;
